# The-Winking-Skeever-Project

./: .gitignore  db.sqlite3  pyproject.toml
employee/: forms.py  models.py  urls.py  views.py
employee/migrations/: 0001_initial.py  0002_profile_latest_schedule.py
employee/templates/employee/: base.html  login.html  logout.html  profile.html  register.html
media/sched/: schedule.csv
mysite/: settings.py  urls.py
post/: admin.py  forms.py  models.py  urls.py  views.py
post/migrations/: 0001_initial.py  0002_rename_pdf_pdfdocument_pdf_file.py  0003_alter_pdfdocument_pdf_file.py  0004_uploaddocument_delete_pdfdocument.py
post/static/post/: musk3.jpg:Zone.Identifier  sch.png:Zone.Identifier
post/templates/post/: base.html  index.html  post_document.html  schedule.html  upload_success.html
schedule/: admin.py  models.py  signals.py  urls.py  views.py
schedule/management/commands/: display_model_data.py
schedule/migrations/: 0001_initial.py
schedule/templates/schedule/: base.html  index.html  post_document.html  schedule.html
