[project]
name = "projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.8.1",
    "crispy-bootstrap4==2024.10",
    "django==5.2",
    "django-crispy-forms==2.4",
    "django-phonenumber-field==8.1.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pdfkit>=1.0.0",
    "phonenumbers==9.0.4",
    "pillow==11.2.1",
    "python-dotenv>=1.1.0",
    "pytz==2025.2",
    "sqlparse==0.5.3",
    "xlrd>=2.0.1",
]
